--- a/pt St. Philips/styles.css
+++ b/pt St. Philips/styles.css
@@ -449,7 +449,7 @@ header a:hover {
 }
 
 .new-span-c {
-	color: grey; 
+	color: white; 
 	font-size: 200%; 
 	font-weight: bold; 
 	margin-right: 0.1em;
