--- a/pt St. Philips/styles.css
+++ b/pt St. Philips/styles.css
@@ -5,7 +5,7 @@ body{
 	/*line-height: 1.5;*/
 	padding: 0;
 	margin: 0;
-	background-color: #f4f4f4;
+	background-color: white;
 }
 
 hr {
@@ -2175,7 +2175,24 @@ footer p {
 	transform: scale(.8);
 }
 
+@media (min-width: 1440px) {
+
+	#caro-img {
+		min-height: 600px;
+	}
+
+}
+
+@media (min-width: 1110px) {
+
+	#caro-img {
+		min-height: 550px;
+	}
+
+}
+
 @media (max-width: 1024px) {
+
     #map {
 	width: 100%; 
     margin: auto;
