new pics and more events
1

--- a/pt St. Philips/styles.css
+++ b/pt St. Philips/styles.css
@@ -1775,7 +1775,7 @@ footer p {
 	margin: 2% 2% 2% 2%;
 	display: inline-block;
 	width: 45%;
-	background-image: url("bap.jpg");
+	background-image: url("./pics/compress/new slide 4.jpg");
 	color: white;
 	text-shadow: 2px 2px 4px #000000;
 	background-repeat: no-repeat;
